# CirBinius

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
.github/: schema_guard.py
.github/actions/setup-cirbinius/: action.yml
.github/workflows/: ci.yml
cirbinius-conformance/: README.md
cirbinius-conformance/circuits/: multiplier.circom  range_check.circom
crates/cirbinius-api/: Cargo.toml
crates/cirbinius-api/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  queue.rs  ratelimit.rs  router.rs  sandbox.rs  state.rs  telemetry.rs  uuid.rs
crates/cirbinius-api/src/handlers/: mod.rs
crates/cirbinius-artifacts/: Cargo.toml
crates/cirbinius-artifacts/src/: lib.rs
crates/cirbinius-bench/: Cargo.toml
crates/cirbinius-binius64/: Cargo.toml
crates/cirbinius-binius64/src/: lib.rs
crates/cirbinius-cbir/: Cargo.toml
crates/cirbinius-cbir/src/: lib.rs
crates/cirbinius-cli/: Cargo.toml
crates/cirbinius-cli/src/: main.rs
crates/cirbinius-core/: Cargo.toml
crates/cirbinius-core/src/: lib.rs
crates/cirbinius-core/tests/: check_witness.rs  circom_differential.rs  compile_r1cs.rs  doctor_backend_capabilities.rs  phase4_pipeline.rs  proof_bundle_schema_e2e.rs  prove_backend_gating.rs  prove_precheck.rs  prove_precheck_bundle_schema_e2e.rs  verify_bundle.rs
crates/cirbinius-core/tests/common/: mod.rs
crates/cirbinius-frontend/: Cargo.toml
crates/cirbinius-frontend/src/: lib.rs
crates/cirbinius-limb-engine/: Cargo.toml
crates/cirbinius-limb-engine/src/: engines.rs  lib.rs  limb_ops.rs  modular.rs
crates/cirbinius-normalize/: Cargo.toml
crates/cirbinius-normalize/src/: lib.rs
crates/cirbinius-optimizer/: Cargo.toml
crates/cirbinius-optimizer/src/: lib.rs
crates/cirbinius-optimizer/src/detector/: and.rs  bit_decomposition.rs  bits2num.rs  boolean.rs  circomlib.rs  greater_than.rs  hash.rs  is_equal.rs  is_zero.rs  less_than.rs  merkle.rs  mimc.rs  mod.rs  mux.rs  not.rs  or.rs  poseidon.rs  range_check.rs  registry.rs  selector.rs  sha.rs  xor.rs
crates/cirbinius-optimizer/src/pass/: and_pass.rs  bc_pass.rs  bit_decomposition_pass.rs  circomlib_pass.rs  generic_pass.rs  hash_pass.rs  is_equal_pass.rs  is_zero_pass.rs  merkle_pass.rs  mimc_pass.rs  mod.rs  mux_pass.rs  or_pass.rs  pipeline.rs  poseidon_pass.rs  range_check_pass.rs  selector_pass.rs  xor_pass.rs
crates/cirbinius-platform/: Cargo.toml
crates/cirbinius-platform/src/: fs.rs  lib.rs  os.rs  process.rs
crates/cirbinius-plugin/: Cargo.toml
crates/cirbinius-plugin/src/: lib.rs
crates/cirbinius-prover/: Cargo.toml
crates/cirbinius-prover/src/: lib.rs
crates/cirbinius-py/: Cargo.toml
crates/cirbinius-py/python/cirbinius/: __init__.py  setup.py
crates/cirbinius-py/src/: lib.rs
crates/cirbinius-r1cs/: Cargo.toml
crates/cirbinius-r1cs/src/: lib.rs
crates/cirbinius-reports/: Cargo.toml
crates/cirbinius-sandbox/: Cargo.toml
crates/cirbinius-sdk/: Cargo.toml
crates/cirbinius-sdk/src/: client.rs  error.rs  lib.rs  types.rs
crates/cirbinius-symbols/: Cargo.toml
crates/cirbinius-symbols/src/: lib.rs
crates/cirbinius-types/: Cargo.toml
crates/cirbinius-types/src/: lib.rs
crates/cirbinius-verifier/: Cargo.toml
crates/cirbinius-verifier/src/: lib.rs
crates/cirbinius-witness/: Cargo.toml
crates/cirbinius-witness/src/: lib.rs
docs/: api.md  architecture.md  cbir-spec.md  cli.md  compiler-pipeline.md  contributing.md  lowering-rules.md  sdk.md  security.md
docs/contracts/: backend-capabilities-v1.md  backend-capabilities-v1.schema.json  cbir-v1.md  cbir-v1.schema.json  lowering-report-v1.md  lowering-report-v1.schema.json  lowering-v1.md  optimization-report-v1.md  optimization-report-v1.schema.json  proof-artifact-v1.md  proof-artifact-v1.schema.json  proof-bundle-v1.md  proof-bundle-v1.schema.json  prove-precheck-bundle-v1.md  prove-precheck-bundle-v1.schema.json  r1cs-parser-v1.md
examples/merkle-path/: README.md
examples/multiplier/: README.md
examples/poseidon-compat/: README.md
examples/range-check/: README.md
examples/sha256/: README.md
scripts/: cirbinius.rb  fake-snarkjs.sh  install.ps1  install.sh
sdk/python/: README.md
sdk/rust/: README.md
sdk/ts/: package.json  tsconfig.json
sdk/ts/src/: index.ts
sdk/typescript/: README.md
tests/circuits/: README.md  eddsa_verify.circom  is_equal.circom  less_than.circom  merkle_membership.circom  mux.circom  num2bits.circom  poseidon.circom  range_check.circom  simple_mul.circom  simple_mul.r1cs  simple_mul.sym  simple_mul.wasm  simple_mul.wtns  simple_mul_binius_witness_bad.json  simple_mul_binius_witness_ok.json
tests/fuzz/: README.md
tests/golden/: README.md  simple_mul.cbir.json
tests/integration/: README.md
web/dashboard/: README.md  index.html
