[workspace]
members = [
  "crates/cirbinius-api",
  "crates/cirbinius-sdk",
  "crates/cirbinius-py",
  "crates/cirbinius-plugin",
  "vendor/httpdate",
  "crates/cirbinius-artifacts",
  "crates/cirbinius-bench",
  "crates/cirbinius-binius64",
  "crates/cirbinius-cbir",
  "crates/cirbinius-cli",
  "crates/cirbinius-core",
  "crates/cirbinius-frontend",
  "crates/cirbinius-limb-engine",
  "crates/cirbinius-normalize",
  "crates/cirbinius-optimizer",
  "crates/cirbinius-platform",
  "crates/cirbinius-prover",
  "crates/cirbinius-r1cs",
  "crates/cirbinius-reports",
  "crates/cirbinius-sandbox",
  "crates/cirbinius-symbols",
  "crates/cirbinius-types",
  "crates/cirbinius-verifier",
  "crates/cirbinius-witness",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/elonmasai7/CirBinius"

[workspace.dependencies]
anyhow = "1.0"
camino = "1.1"
clap = { version = "4.5", features = ["derive"] }
directories = "6.0"
duct = "0.13"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.15"
thiserror = "2.0"
tracing = "0.1"
which = "7.0"

# Phase 5 API deps
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "request-id", "limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
redis = { version = "0.28", features = ["tokio-comp", "streams", "connection-manager"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
argon2 = "0.5"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["http-proto", "tokio"] }
tracing-appender = "0.2"
dotenvy = "0.15"
futures = "0.3"
tokio-util = "0.7"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
listenfd = "1.0"
console-subscriber = "0.4"
mime_guess = "2"
sanitize-filename = "0.5"
