[package]
name = "cirbinius-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cirbinius-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
cirbinius-core = { path = "../cirbinius-core" }
cirbinius-types = { path = "../cirbinius-types" }
cirbinius-artifacts = { path = "../cirbinius-artifacts" }
cirbinius-sandbox = { path = "../cirbinius-sandbox" }
cirbinius-frontend = { path = "../cirbinius-frontend" }
cirbinius-prover = { path = "../cirbinius-prover" }
cirbinius-binius64 = { path = "../cirbinius-binius64" }
cirbinius-cbir = { path = "../cirbinius-cbir" }
cirbinius-optimizer = { path = "../cirbinius-optimizer" }
cirbinius-verifier = { path = "../cirbinius-verifier" }
cirbinius-witness = { path = "../cirbinius-witness" }
cirbinius-normalize = { path = "../cirbinius-normalize" }

tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http1"] }
http = "1"
http-body = "1"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", default-features = false, features = ["cors"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tower-layer = "0.3"
tower-service = "0.3"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex = "0.4"
tracing.workspace = true
bytes = "1"
futures-util = "0.3"
camino.workspace = true
tempfile.workspace = true
parking_lot = "0.12"
once_cell = "1"
getrandom = "0.2"
httpdate = { path = "../../vendor/httpdate" }
libc = "0.2"
