[package]
name = "cirbinius-artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cirbinius-types = { path = "../cirbinius-types" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true

[dev-dependencies]
jsonschema = "0.18"
