[package]
name = "cirbinius-binius64"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cirbinius-cbir = { path = "../cirbinius-cbir" }
cirbinius-limb-engine = { path = "../cirbinius-limb-engine" }
cirbinius-types = { path = "../cirbinius-types" }
serde.workspace = true
