[package]
name = "cirbinius-platform"
version = "0.1.0"
edition = "2024"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
camino = { workspace = true }
directories = { workspace = true }
duct = { workspace = true }
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
which = { workspace = true }
