[package]
name = "cirbinius-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
cirbinius-sdk = { path = "../cirbinius-sdk" }
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json.workspace = true
