[package]
name = "cirbinius-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "io-util"] }
httparse = "1.10"
thiserror.workspace = true
hex.workspace = true
