[package]
name = "cirbinius-witness"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
cirbinius-r1cs = { path = "../cirbinius-r1cs" }
cirbinius-symbols = { path = "../cirbinius-symbols" }
num-bigint.workspace = true
num-traits.workspace = true
serde.workspace = true
serde_json.workspace = true
